--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio_hwanhui</title>
+  <title>디블리셔 김</title>
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -69,12 +69,15 @@
           <dd><span>2024.09</span>웹 디자인 기능 필기 준비중</dd>
           <dd><span>2011.07</span>전산응용기계제도기능사</dd>    
         </dl>
-        <ul class="tool">
-          <li><img src="./img/Ps.png" alt="포토샵"></li>
-          <li><img src="./img/Ai.png" alt="일러스트"></li>
-          <li><img src="./img/Figma.png" alt="피그마"></li>
-          <li><img src="./img/html_js_css.png" alt="html, js, css"></li>
-        </ul>
+        <div class="tool">
+          <p>Tool</p>
+          <ul>
+            <li><img src="./img/Ps.png" alt="포토샵"></li>
+            <li><img src="./img/Ai.png" alt="일러스트"></li>
+            <li><img src="./img/Figma.png" alt="피그마"></li>
+            <li><img src="./img/html_js_css.png" alt="html, js, css"></li>
+          </ul>
+        </div>
       </div><!-- pro_right -->
     </div>
     <div class="borderCenter"></div>
@@ -94,7 +97,7 @@
           <dd>index</dd>
         </dl>
         <dl>
-          <dt>제작 기간: </dt>
+          <dt>사용 프로그램: </dt>
           <dd><img src="./img/Figma.png" alt="피그마"></dd>
           <dd><img src="./img/Ps.png" alt="포토샵"></dd>
           <dd><img src="./img/Ai.png" alt="일러스트"></dd>
@@ -122,7 +125,7 @@
           <dd>index, 컬처페이지, 상품 상세페이지</dd>
         </dl>
         <dl>
-          <dt>제작 기간: </dt>
+          <dt>사용 프로그램: </dt>
           <dd><img src="./img/Figma.png" alt="피그마"></dd>
           <dd><img src="./img/Ps.png" alt="포토샵"></dd>
           <dd><img src="./img/html_js_css.png" alt="html, js, css"></dd>
@@ -131,7 +134,7 @@
       <div class="button">
         <a href="#">기획서</a>
         <a href="#">와이어프레임</a>
-        <a href="#">결과보기</a>
+        <a href="https://rlaksl.github.io/M-MALL_project/">결과보기</a>
       </div>
     </div>
     <a href="https://rlaksl.github.io/M-MALL_project/" class="mMallRight"><img src="./img/mMall.png" alt="M-Mall"></a>
@@ -150,7 +153,7 @@
           <dd>index, 컬처페이지, 상품 상세페이지</dd>
         </dl>
         <dl>
-          <dt>제작 기간: </dt>
+          <dt>사용 프로그램: </dt>
           <dd><img src="./img/Figma.png" alt="피그마"></dd>
           <dd><img src="./img/Ps.png" alt="포토샵"></dd>
           <dd><img src="./img/html_js_css.png" alt="html, js, css"></dd>
@@ -178,7 +181,7 @@
         scrollTop : winHeight * i});
     }); */
 
-    $(window).on('scroll', function(){
+    /* $(window).on('scroll', function(){
       let scr = $(window).scrollTop();
       for(let i = 0; i<$('ul li').length; i++){
         if(scr >= winHeight*i && scr < winHeight *(i+1)){
@@ -186,7 +189,7 @@
         $('ul li').eq(i).addClass('on');};
         }
 
-      });
+      }); */
   </script>
 </body>
 </html> 
