--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <ul>
       <li class="on"></li>
-      <li><a href="#profileWrap">Profile</a></li> <!-- # 뒤에 넘기고 싶은 페이지 아이디 넣으면 됨 -->
+      <li><a href="#profileWrap">Profile</a></li>
       <li><a href="#hdexWrap">Web desigen</a></li>
       <li>Sns</li>
       <li>Banner</li>
@@ -51,7 +51,7 @@
       </dl>
       <dl class="sns">
         <dt>SNS</dt>
-        <dd><a href="https://www.instagram.com/hwanhui_i">@hwanhui_i</a></dd>
+        <dd><a href="https://www.instagram.com/hwanhui_i" target="_blank">@hwanhui_i</a></dd>
       </dl>
       </div><!-- pro_left -->
       <div class="pro_right">
@@ -141,7 +141,7 @@
   </div><!-- M-MALLWrap -->
   <div id="madecaWrap">
     <div class="madecaLeft">
-      <h2>M-Mall</h2>
+      <h2>MADECA PRIME</h2>
       <h3>concept on<br>desktop</h3>
       <div class="infor">
         <dl>
@@ -160,19 +160,19 @@
         </dl>
       </div>
       <div class="button">
-        <a href="#">기획서</a>
-        <a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=159-2&node-type=frame&t=B0xiS8doV3PlvqQu-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">와이어프레임</a>
-        <a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=2-30&node-type=frame&t=ZzUqrReXM3IeVEBI-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1">결과보기</a>
+        <a href="#" target="_blank">기획서</a>
+        <a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=159-2&node-type=frame&t=B0xiS8doV3PlvqQu-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">와이어프레임</a>
+        <a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=2-30&node-type=frame&t=ZzUqrReXM3IeVEBI-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a>
       </div>
     </div>
-    <a href="" class="madecaRight"><img src="./img/madecaPrime.png" alt="마데카 프라임"></a>
+    <a href="#" class="madecaRight"><img src="./img/madecaPrime.png" alt="마데카 프라임"></a>
   </div><!-- madecaWrap -->
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/jquery.mousewheel.min.js"></script>
   <script>
     $('ul li').on('click', function(){
       $(this).addClass('on').siblings().removeClass('on');
-    });
+    });/* 
     let winHeight = $(window).height();
     $('div').on('mousewheel', function(e,d){
       if(d>0){ // 마우스 휠  올렸을 때
@@ -186,7 +186,7 @@
           scrollTop : nxt
         })
       }
-    });
+    }); */
   </script>
 </body>
 </html> 
