--- a/index.html
+++ b/index.html
@@ -35,24 +35,20 @@
     <p>My Profile</p>
     <div class="profile">
       <div class="pro_left">
-      <img src="./img/hui.png" alt="프로필사진">
-      <p class="name">김환희</p>
-      <dl class="Birth">
-        <dt>Birth</dt>
-        <dd>1993.11.09</dd>
-      </dl>
-      <dl>
-        <dt>Phone</dt>
-        <dd>010-1234-5678</dd>
-      </dl>
-      <dl>
-        <dt>E-mail</dt>
-        <dd>이메일@gmail.com</dd>
-      </dl>
-      <dl class="sns">
-        <dt>SNS</dt>
-        <dd><a href="https://www.instagram.com/hwanhui_i" target="_blank">@hwanhui_i</a></dd>
-      </dl>
+        <img src="./img/hui.png" alt="프로필사진">
+        <p class="name">김환희</p>
+        <dl class="Birth">
+          <dt>Birth</dt>
+          <dd>1993.11.09</dd>
+        </dl>
+        <dl>
+          <dt>Phone</dt>
+          <dd>010-9385-7228</dd>
+        </dl>
+        <dl>
+          <dt>E-mail</dt>
+          <dd>eehiuh@gmail.com</dd>
+        </dl>
       </div><!-- pro_left -->
       <div class="pro_right">
         <dl class="exper">
@@ -62,11 +58,10 @@
           <dd><span>2022.06 - 2024.04</span>교육법인 쿰101 (정규직)</dd>
           <dd><span>2022.01 - 2022.07</span>무인양품 (파트타이머)</dd>      
           <dd><span>2018.01 - 2021.07</span>무인양품 (정규직)</dd>      
-          <dd><span>2009.03 - 2012.02</span>부평디자인과학고등학교 (졸업)</dd>      
+          <dd><span>2009.03 - 2012.02</span>부평디자인과학고등학교 (제품모델링디자인과 졸업)</dd>      
         </dl>
         <dl class="1icense">
           <dt>License</dt>
-          <dd><span>2024.09 </span>웹 디자인 기능 필기 준비중</dd>
           <dd><span>2011.07 </span>전산응용기계제도기능사</dd>    
         </dl>
         <div class="tool">
@@ -104,7 +99,7 @@
         </dl>
       </div>
       <div class="button">
-        <a href="#">기획서</a>
+        <!-- <a href="#">기획서</a> -->
         <a href="https://www.figma.com/proto/s23xnVymbk6RuhwSxn3K5R/HDEX?page-id=0%3A1&node-id=21-15&node-type=frame&viewport=413%2C289%2C0.07&t=08NPYBZAdXVVKnAY-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=21%3A15" target="_blank">와이어프레임</a>
         <a href="https://www.figma.com/proto/s23xnVymbk6RuhwSxn3K5R/HDEX?node-id=130-89&node-type=frame&t=2ldRl58wygFvSMS9-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=21%3A110" target="_blank">결과보기</a>
       </div>
@@ -150,7 +145,7 @@
         </dl>
         <dl>
           <dt>제작 페이지: </dt>
-          <dd>index, 컬처페이지, 상품 상세페이지</dd>
+          <dd>index, 서브페이지, 상품 상세페이지</dd>
         </dl>
         <dl>
           <dt>사용 프로그램: </dt>
@@ -160,7 +155,7 @@
         </dl>
       </div>
       <div class="button">
-        <a href="#" target="_blank">기획서</a>
+        <!-- <a href="#" target="_blank">기획서</a> -->
         <a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=159-2&node-type=frame&t=B0xiS8doV3PlvqQu-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">와이어프레임</a>
         <a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=2-30&node-type=frame&t=ZzUqrReXM3IeVEBI-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a>
       </div>
