--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
       <ul class="button">
         <li><a href="https://www.figma.com/proto/UG7itBeM6mzU3uAY8uKA7W/%ED%8F%AC%ED%8F%B4-%EA%B8%B0%ED%9A%8D%EC%84%9C%26-%EB%B0%9C%ED%91%9C-%EB%8C%80%EB%B3%B8?page-id=0%3A1&node-id=1-44&node-type=frame&viewport=3354%2C323%2C0.32&t=zJTkE17Edqj4qxvZ-1&scaling=min-zoom&content-scaling=fixed" target="_blank">기획서</a></li>
-        <li><a href="https://www.figma.com/proto/J8MEetycnmffPsvOeYrTUD/M%ED%8F%AC%EC%9D%B8%ED%8A%B8-%EB%AA%B0?node-id=97-178&node-type=frame&t=pt2KUEanMJXlj59n-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A49">와이어프레임</a></li>
+        <li><a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=231-2&node-type=frame&t=D5Ssbq9Xu3YGXWZ0-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">와이어프레임</a></li>
         <li><a href="https://rlaksl.github.io/M-MALL_project/ " target="_blank">결과보기</a></li>
       </ul>
     </div>
@@ -155,7 +155,7 @@
         </dl>
       </div>
       <ul class="button">
-        <li><a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=159-2&node-type=frame&t=B0xiS8doV3PlvqQu-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">와이어프레임</a></li>
+        <li><a href="https://www.figma.com/design/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=231-2&t=tEVF0KjcbR3CTCph-1" target="_blank">와이어프레임</a></li>
         <li><a href="https://www.figma.com/proto/NGLuNNG5fznjYer3P0tVl0/%EB%A7%88%EB%8D%B0%EC%B9%B4%ED%94%84%EB%9D%BC%EC%9E%84?node-id=2-30&node-type=frame&t=ZzUqrReXM3IeVEBI-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1" target="_blank">결과보기</a></li>
       </ul>
     </div>
